package org.example.domain;

import lombok.Value;

@Value
public class SuggestedPrice {
    int value;
}
